{
    "name": "InputMap",
    "maps": [
        {
            "name": "Mouse",
            "id": "d552b217-8edf-4881-a8e2-d87b0c1d1db6",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "4079372f-01f0-490c-adea-f5a0eb15a8a0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftButton",
                    "type": "Button",
                    "id": "04ef8e91-ca63-44ed-b175-ae6796e33cc1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightButton",
                    "type": "Button",
                    "id": "6bd91e6a-8699-4a1c-be13-5c8b3087b7ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fe9684a5-3b99-4df8-bf68-2d52789dec5e",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ae11804-a9e5-4873-a757-22df55651a63",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60bf4917-1c27-4fc9-8bfc-e2a243c620a4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "LeftButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87fdf3b9-b5ba-4420-bf3e-1ecdb8abc963",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "RightButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "id": "cc03b1ce-032e-43c6-8a1d-31b8731e007d",
            "actions": [
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "60f887fe-cde5-48bd-8877-5cd78006b713",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4a2baec4-68b9-4ce8-a421-7d508c5f81eb",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardAndMouse",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardAndMouse",
            "bindingGroup": "KeyboardAndMouse",
            "devices": []
        }
    ]
}